@@ -6,3 +6,41 @@
 
 #IncludeRegexTransform: 
 
+/home/csraea/Desktop/coma/src/CompressionManager.h
+cstdlib
+-
+stdint.h
+-
+string
+-
+string.h
+-
+vector
+-
+list
+-
+map
+-
+unistd.h
+-
+sys/stat.h
+-
+iostream
+-
+fcntl.h
+-
+datatypes.h
+/home/csraea/Desktop/coma/src/datatypes.h
+
+/home/csraea/Desktop/coma/src/datatypes.h
+stdint.h
+-
+
+/home/csraea/Desktop/coma/src/main.cpp
+cstdio
+-
+iostream
+-
+CompressionManager.h
+/home/csraea/Desktop/coma/src/CompressionManager.h
+
