@@ -3,4 +3,5 @@
 
 CMakeFiles/coma.dir/src/main.cpp.o
  /home/csraea/Desktop/coma/src/CompressionManager.h
+ /home/csraea/Desktop/coma/src/datatypes.h
  /home/csraea/Desktop/coma/src/main.cpp
