@@ -2,5 +2,6 @@
 # Generated by "Unix Makefiles" Generator, CMake Version 3.16
 
 CMakeFiles/coma.dir/src/main.cpp.o: ../../src/CompressionManager.h
+CMakeFiles/coma.dir/src/main.cpp.o: ../../src/datatypes.h
 CMakeFiles/coma.dir/src/main.cpp.o: ../../src/main.cpp
 
