@@ -6,6 +6,7 @@ src/CMakeFiles/src.dir/ArgParser.cpp.o
 src/CMakeFiles/src.dir/CompressionManager.cpp.o
  /home/csraea/Desktop/coma/src/CompressionManager.cpp
  /home/csraea/Desktop/coma/src/CompressionManager.h
+ /home/csraea/Desktop/coma/src/datatypes.h
 src/CMakeFiles/src.dir/DirFileManager.cpp.o
  /home/csraea/Desktop/coma/src/DirFileManager.cpp
 src/CMakeFiles/src.dir/ExecutionController.cpp.o
@@ -14,6 +15,8 @@ src/CMakeFiles/src.dir/SecurityManager.cpp.o
  /home/csraea/Desktop/coma/src/SecurityManager.cpp
 src/CMakeFiles/src.dir/compression/huffman.cpp.o
  /home/csraea/Desktop/coma/src/compression/huffman.cpp
+ /home/csraea/Desktop/coma/src/compression/huffman.h
 src/CMakeFiles/src.dir/main.cpp.o
  /home/csraea/Desktop/coma/src/CompressionManager.h
+ /home/csraea/Desktop/coma/src/datatypes.h
  /home/csraea/Desktop/coma/src/main.cpp
