@@ -5,6 +5,7 @@ src/CMakeFiles/src.dir/ArgParser.cpp.o: ../../src/ArgParser.cpp
 
 src/CMakeFiles/src.dir/CompressionManager.cpp.o: ../../src/CompressionManager.cpp
 src/CMakeFiles/src.dir/CompressionManager.cpp.o: ../../src/CompressionManager.h
+src/CMakeFiles/src.dir/CompressionManager.cpp.o: ../../src/datatypes.h
 
 src/CMakeFiles/src.dir/DirFileManager.cpp.o: ../../src/DirFileManager.cpp
 
@@ -13,7 +14,9 @@ src/CMakeFiles/src.dir/ExecutionController.cpp.o: ../../src/ExecutionController.
 src/CMakeFiles/src.dir/SecurityManager.cpp.o: ../../src/SecurityManager.cpp
 
 src/CMakeFiles/src.dir/compression/huffman.cpp.o: ../../src/compression/huffman.cpp
+src/CMakeFiles/src.dir/compression/huffman.cpp.o: ../../src/compression/huffman.h
 
 src/CMakeFiles/src.dir/main.cpp.o: ../../src/CompressionManager.h
+src/CMakeFiles/src.dir/main.cpp.o: ../../src/datatypes.h
 src/CMakeFiles/src.dir/main.cpp.o: ../../src/main.cpp
 
