@@ -1,0 +1,126 @@
+==19125== Memcheck, a memory error detector
+==19125== Copyright (C) 2002-2017, and GNU GPL'd, by Julian Seward et al.
+==19125== Using Valgrind-3.15.0-608cb11914-20190413 and LibVEX; rerun with -h for copyright info
+==19125== Command: ./out/coma ./out/test
+==19125== Parent PID: 19124
+==19125== 
+--19125-- 
+--19125-- Valgrind options:
+--19125--    --leak-check=full
+--19125--    --show-leak-kinds=all
+--19125--    --track-origins=yes
+--19125--    --verbose
+--19125--    --log-file=./out/valgrind-out.txt
+--19125-- Contents of /proc/version:
+--19125--   Linux version 5.4.0-66-generic (buildd@lgw01-amd64-039) (gcc version 9.3.0 (Ubuntu 9.3.0-17ubuntu1~20.04)) #74-Ubuntu SMP Wed Jan 27 22:54:38 UTC 2021
+--19125-- 
+--19125-- Arch and hwcaps: AMD64, LittleEndian, amd64-cx16-lzcnt-rdtscp-sse3-ssse3-avx-avx2-bmi-f16c-rdrand
+--19125-- Page sizes: currently 4096, max supported 4096
+--19125-- Valgrind library directory: /usr/lib/x86_64-linux-gnu/valgrind
+--19125-- Reading syms from /home/csraea/Desktop/coma/out/coma
+--19125-- Reading syms from /lib/x86_64-linux-gnu/ld-2.31.so
+--19125--   Considering /lib/x86_64-linux-gnu/ld-2.31.so ..
+--19125--   .. CRC mismatch (computed 975d0390 wanted 30bd717f)
+--19125--   Considering /lib/x86_64-linux-gnu/ld-2.31.so ..
+--19125--   .. CRC mismatch (computed 975d0390 wanted 30bd717f)
+--19125--   Considering /usr/lib/debug/lib/x86_64-linux-gnu/ld-2.31.so ..
+--19125--   .. CRC is valid
+--19125-- Reading syms from /usr/lib/x86_64-linux-gnu/valgrind/memcheck-amd64-linux
+--19125--    object doesn't have a symbol table
+--19125--    object doesn't have a dynamic symbol table
+--19125-- Scheduler: using generic scheduler lock implementation.
+--19125-- Reading suppressions file: /usr/lib/x86_64-linux-gnu/valgrind/default.supp
+==19125== embedded gdbserver: reading from /tmp/vgdb-pipe-from-vgdb-to-19125-by-csraea-on-???
+==19125== embedded gdbserver: writing to   /tmp/vgdb-pipe-to-vgdb-from-19125-by-csraea-on-???
+==19125== embedded gdbserver: shared mem   /tmp/vgdb-pipe-shared-mem-vgdb-19125-by-csraea-on-???
+==19125== 
+==19125== TO CONTROL THIS PROCESS USING vgdb (which you probably
+==19125== don't want to do, unless you know exactly what you're doing,
+==19125== or are doing some strange experiment):
+==19125==   /usr/lib/x86_64-linux-gnu/valgrind/../../bin/vgdb --pid=19125 ...command...
+==19125== 
+==19125== TO DEBUG THIS PROCESS USING GDB: start GDB like this
+==19125==   /path/to/gdb ./out/coma
+==19125== and then give GDB the following command
+==19125==   target remote | /usr/lib/x86_64-linux-gnu/valgrind/../../bin/vgdb --pid=19125
+==19125== --pid is optional if only one valgrind process is running
+==19125== 
+--19125-- REDIR: 0x4022e10 (ld-linux-x86-64.so.2:strlen) redirected to 0x580c9ce2 (???)
+--19125-- REDIR: 0x4022be0 (ld-linux-x86-64.so.2:index) redirected to 0x580c9cfc (???)
+--19125-- Reading syms from /usr/lib/x86_64-linux-gnu/valgrind/vgpreload_core-amd64-linux.so
+--19125--    object doesn't have a symbol table
+--19125-- Reading syms from /usr/lib/x86_64-linux-gnu/valgrind/vgpreload_memcheck-amd64-linux.so
+--19125--    object doesn't have a symbol table
+==19125== WARNING: new redirection conflicts with existing -- ignoring it
+--19125--     old: 0x04022e10 (strlen              ) R-> (0000.0) 0x580c9ce2 ???
+--19125--     new: 0x04022e10 (strlen              ) R-> (2007.0) 0x0483f060 strlen
+--19125-- REDIR: 0x401f5f0 (ld-linux-x86-64.so.2:strcmp) redirected to 0x483ffd0 (strcmp)
+--19125-- REDIR: 0x4023370 (ld-linux-x86-64.so.2:mempcpy) redirected to 0x4843a20 (mempcpy)
+--19125-- Reading syms from /usr/lib/x86_64-linux-gnu/libstdc++.so.6.0.28
+--19125--    object doesn't have a symbol table
+--19125-- Reading syms from /lib/x86_64-linux-gnu/libgcc_s.so.1
+--19125--    object doesn't have a symbol table
+--19125-- Reading syms from /lib/x86_64-linux-gnu/libc-2.31.so
+--19125--   Considering /lib/x86_64-linux-gnu/libc-2.31.so ..
+--19125--   .. CRC mismatch (computed 86b78530 wanted e380f01c)
+--19125--   Considering /lib/x86_64-linux-gnu/libc-2.31.so ..
+--19125--   .. CRC mismatch (computed 86b78530 wanted e380f01c)
+--19125--   Considering /usr/lib/debug/lib/x86_64-linux-gnu/libc-2.31.so ..
+--19125--   .. CRC is valid
+--19125-- Reading syms from /lib/x86_64-linux-gnu/libm-2.31.so
+--19125--   Considering /lib/x86_64-linux-gnu/libm-2.31.so ..
+--19125--   .. CRC mismatch (computed fcb42c76 wanted f6c95789)
+--19125--   Considering /lib/x86_64-linux-gnu/libm-2.31.so ..
+--19125--   .. CRC mismatch (computed fcb42c76 wanted f6c95789)
+--19125--   Considering /usr/lib/debug/lib/x86_64-linux-gnu/libm-2.31.so ..
+--19125--   .. CRC is valid
+--19125-- REDIR: 0x4b08600 (libc.so.6:memmove) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b07900 (libc.so.6:strncpy) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b08930 (libc.so.6:strcasecmp) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b07220 (libc.so.6:strcat) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b07960 (libc.so.6:rindex) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b09dd0 (libc.so.6:rawmemchr) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b24e60 (libc.so.6:wmemchr) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b249a0 (libc.so.6:wcscmp) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b08760 (libc.so.6:mempcpy) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b08590 (libc.so.6:bcmp) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b07890 (libc.so.6:strncmp) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b072d0 (libc.so.6:strcmp) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b086c0 (libc.so.6:memset) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b24960 (libc.so.6:wcschr) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b077f0 (libc.so.6:strnlen) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b073b0 (libc.so.6:strcspn) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b08980 (libc.so.6:strncasecmp) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b07350 (libc.so.6:strcpy) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b08ad0 (libc.so.6:memcpy@@GLIBC_2.14) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b260d0 (libc.so.6:wcsnlen) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b249e0 (libc.so.6:wcscpy) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b079a0 (libc.so.6:strpbrk) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b07280 (libc.so.6:index) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b077b0 (libc.so.6:strlen) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b10d20 (libc.so.6:memrchr) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b089d0 (libc.so.6:strcasecmp_l) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b08550 (libc.so.6:memchr) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b24ab0 (libc.so.6:wcslen) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b07c60 (libc.so.6:strspn) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b088d0 (libc.so.6:stpncpy) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b08870 (libc.so.6:stpcpy) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b09e10 (libc.so.6:strchrnul) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4b08a20 (libc.so.6:strncasecmp_l) redirected to 0x48331d0 (_vgnU_ifunc_wrapper)
+--19125-- REDIR: 0x4bf0490 (libc.so.6:__strrchr_avx2) redirected to 0x483ea10 (rindex)
+--19125-- REDIR: 0x4b02260 (libc.so.6:malloc) redirected to 0x483b780 (malloc)
+--19125-- REDIR: 0x4bf0660 (libc.so.6:__strlen_avx2) redirected to 0x483ef40 (strlen)
+--19125-- REDIR: 0x4becc50 (libc.so.6:__memcmp_avx2_movbe) redirected to 0x48421e0 (bcmp)
+--19125-- REDIR: 0x4bebb60 (libc.so.6:__strcmp_avx2) redirected to 0x483fed0 (strcmp)
+--19125-- REDIR: 0x4b03c90 (libc.so.6:calloc) redirected to 0x483dce0 (calloc)
+--19125-- REDIR: 0x4bf1ba0 (libc.so.6:__strcpy_avx2) redirected to 0x483f090 (strcpy)
+--19125-- REDIR: 0x4bf3650 (libc.so.6:__mempcpy_avx_unaligned_erms) redirected to 0x4843660 (mempcpy)
+--19125-- REDIR: 0x4b02850 (libc.so.6:free) redirected to 0x483c9d0 (free)
+==19125== 
+==19125== HEAP SUMMARY:
+==19125==     in use at exit: 0 bytes in 0 blocks
+==19125==   total heap usage: 4 allocs, 4 frees, 73,757 bytes allocated
+==19125== 
+==19125== All heap blocks were freed -- no leaks are possible
+==19125== 
+==19125== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
