@@ -1,0 +1,6 @@
+valgrind --leak-check=full \
+         --show-leak-kinds=all \
+         --track-origins=yes \
+         --verbose \
+         --log-file=./out/valgrind-out.txt \
+         ./out/coma ./out/test
