@@ -1,0 +1,7 @@
+class Huffman {
+    private:
+
+    public:
+        void compress();
+        void decompress();
+};
